--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.7</version>
+            <version>2.10.1</version>
         </dependency>
 
         <dependency>
@@ -40,6 +40,20 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>4.0.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>casbah_2.10</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
