--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>casbah_2.10</artifactId>
+            <artifactId>casbah-core_2.10</artifactId>
             <version>2.8.2</version>
         </dependency>
 
