--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,19 @@
             <artifactId>twitter4j-core</artifactId>
             <version>4.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.facebook4j</groupId>
+            <artifactId>facebook4j-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>casbah-core_2.10</artifactId>
             <version>2.8.2</version>
         </dependency>
+
+
 
 
     </dependencies>
